// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Component renders correctly when checked 1`] = `
<Styled(div)
  checked={true}
  className="checkbox-component"
/>
`;

exports[`Checkbox Component renders correctly when unchecked 1`] = `
<Styled(div)
  checked={false}
  className="checkbox-component"
/>
`;
